fixed some alignments

--- a/src/styles/listStyle.css
+++ b/src/styles/listStyle.css
@@ -34,9 +34,6 @@
 }
 
 
-#grey-bg{
-	-fx-background-color: #000000;
-}
 
 .separator *.line { 
 	-fx-border-style: solid;
@@ -49,8 +46,12 @@
 }
 
 
+.groupTree{
+	-fx-border-color: #292929;
+}
+
 .tree-view{
-	-fx-border-width: 0;
+
 }
 
 .tree-cell{
